refactor(creditsEditor): code style inspections