@@ -8,9 +8,9 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
 /**
@@ -21,13 +21,14 @@ final class DirectoryStorage implements ResourceStorage {
 
     private final @NotNull Path root;
 
+    @Contract(pure = true)
     DirectoryStorage(@NotNull Path root) {
         this.root = root;
     }
 
     @Override
-    public boolean hasFile(@NotNull String relPath) {
-        return Files.exists(root.resolve(relPath));
+    public boolean hasNoFile(@NotNull String relPath) {
+        return !Files.exists(root.resolve(relPath));
     }
 
     @Override
@@ -62,16 +63,18 @@ final class DirectoryStorage implements ResourceStorage {
                     p -> p.getFileName()
                         .toString())
                 .sorted(Comparator.naturalOrder())
-                .collect(Collectors.toList());
+                .toList();
             return names.stream();
         }
     }
 
+    @Contract(pure = true)
     @Override
     public @NotNull Path location() {
         return root;
     }
 
+    @Contract(pure = true)
     @Override
     public void close() {
         // Directory storage holds no system resource.
